FIX: Fixing up temporary css values permitting to obtain the best program render for each export option without content overflow over a page

--- a/client/src/pages/exports/components/subComponents/css/exportFooter.module.css
+++ b/client/src/pages/exports/components/subComponents/css/exportFooter.module.css
@@ -10,12 +10,14 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    line-height: .3em;
 }
 
 .header_en {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    line-height: .3em;
 }
 
 .sub_header {
