--- a/client/src/pages/exports/css/exports.module.css
+++ b/client/src/pages/exports/css/exports.module.css
@@ -8,7 +8,7 @@
     height: 740px;
     max-height: 740px;
     min-height: 740px;
-    padding-top: 50px;
+    padding-top: 45px;
 }
 
 .divisor:last-child {
@@ -16,7 +16,7 @@
 }
 
 .table {
-    margin-top: 40px;
+    margin-top: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,8 +25,16 @@
   
 .td, .th {
     border: 1px solid black;
+    font-weight: bold;
     text-align: center;
-    padding: 8px;
     width: 10px;
     min-width: 120px;
+}
+
+.tableRow {
+    font-size: 11px;
+}
+
+hr {
+    background: #000;
 }
